assets/css/menu.scss
/* ... */
// navbar hamburger menu

[data-is-scrolled="true"] .p-menuButton {
  opacity: 1;
  -webkit-transform: none;
  transform: none;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transition-duration: .2s, .2s, .6s, .6s;
  transition-duration: .2s, .2s, .6s, .6s;
  visibility: visible;
  z-index: 12;
}

.p-menuButton {
  position: fixed;
  right: 1.6875rem;
  top: 0.1875rem;
  width: 4.25rem;
  z-index: 15;
}

// hamburger menu extension


.p-submenu[data-is-submenu-opened="true"] .p-menu__inner {
  border-radius: 0.5rem;
  transform: translate(0.825rem, -0.325rem);
  width: 13.75rem;
}

.p-submenu[data-is-submenu-opened="false"] .p-menu__inner {
  border-radius: 0.625rem;
  height: 2.3125rem !important;
  width: 3.25rem !important;
}


.p-menu[data-is-menu-opened="true"], .p-submenu[data-is-submenu-opened="true"] {
  opacity: 1;
  visibility: visible;
}

.p-menu[data-is-menu-opened="false"], .p-submenu[data-is-submenu-opened="false"] {
  opacity: 0;
  pointer-events: none;
  -webkit-transition-delay: .4s;
  transition-delay: .4s;
  visibility: hidden;
}

.p-menu,
.p-submenu {
  opacity: 0;
  position: fixed;
  right: 1.6875rem;
  top: 1.1875rem;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-property: opacity, visibility;
  transition-property: opacity, visibility;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  visibility: hidden;
  z-index: 11;
}

.p-menu[data-is-menu-opened="true"] .p-menu__inner {
  border-radius: .5rem;
  -webkit-transform: translate(.825rem, -.325rem);
  transform: translate(.825rem, -.325rem);
  width: 13.75rem;
}

.p-menu[data-is-menu-opened="false"] .p-menu__inner {
  border-radius: .625rem;
  height: 2.3125rem !important;
  width: 3.25rem !important;
}

.p-menu__inner {
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transform-origin: top right;
  transform-origin: top right;
  -webkit-transition-duration: .6s;
  transition-duration: .6s;
  -webkit-transition-property: width, height, -webkit-transform;
  /* transition-property: width,height,-webkit-transform; */
  /* transition-property: transform,width,height; */
  transition-property: transform, width, height, -webkit-transform;
  -webkit-transition-timing-function: cubic-bezier(.19, 1, .22, 1);
  transition-timing-function: cubic-bezier(.19, 1, .22, 1);
}

.p-menu__contents {
  background-color: #142432;
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  width: 13.75rem;
}

.p-menuNav,
.p-menuNavList {
  display: block;
  position: relative;
  width: 100%;
  list-style-type: none
}

.p-menuNav {
  padding: 3.6875rem 1.8125rem 2rem;
}

li.p-menuNavListItem>a {
  text-decoration: none;
}

.p-menuNav .p-menuNavList {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.p-menuNavListItem__inner {
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  align-items: center;
  /* display: -webkit-box; */
  /* display: -ms-flexbox; */
  display: flex;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
  justify-content: flex-start;
  padding-left: .3125rem;
  position: relative;
  width: 100%;
}

.p-menuNavListItem:first-child::after,
.p-menuNavListItem:last-child::after {
  background-color: white;
  bottom: -1.1875rem;
  content: "";
  height: .0625rem;
  left: .3125rem;
  opacity: .15;
  position: absolute;
  right: .3125rem;
  width: 100%;
}

.p-menuNavListItem:first-child {
  margin-bottom: 2.375rem;
}

.p-menuNavListItem:not(:first-child) {
  margin-top: .125rem;
}

.p-menuNavListItem:last-child {
  margin-bottom: 2.6875rem;
}

.p-menuNavListItem {
  height: 1.625rem;
  position: relative;
  width: 100%;
}

.p-menuNavListItem__label {
  -webkit-font-feature-settings: normal;
  font-feature-settings: normal;
  color: white;
  display: inline-block;
  font-size: 1rem;
  font-weight: 500;
  letter-spacing: -.04em;
  line-height: .92;
  position: relative;
  text-transform: none;
  text-transform: uppercase;
  white-space: nowrap;
  z-index: 1;
}

.p-menuNavSubListItem {
  cursor: pointer;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  transition-duration: .3s;
  border-bottom: 1px solid #1e6cf7;
  padding: 12px 0;
  position: relative;
}

[data-is-submenu-opened="false"] .p-submenu {
  --tw-skew-y: 6deg;
  transform: translate(0, 0) rotate(0) skewX(0) skewY(6deg) scaleX(1) scaleY(1);
  transition-duration: .5s;
}

[data-is-submenu-opened="true"] .p-submenu {
  --tw-translate-x: -100%;
  transform: translate(-100%, 0) rotate(0) skewX(0) skewY(0) scaleX(var1) scaleY(1);
  transition-duration: .5s;
}



// contact button

.c-roundedButton::before {
  border: .0625rem solid;
  border-radius: inherit;
  content: "";
  display: block;
  height: 100%;
  left: 0;
  opacity: .2;
  position: absolute;
  top: 0;
  width: 100%;
}

.p-menuContactLink {
  color: var(--color-white);
  display: inline-block;
  pointer-events: all;
}

.c-roundedButton {
  text-rendering: auto;
  -webkit-font-smoothing: never;
  border-radius: 624.9375rem;
  height: 1.25rem;
  overflow: hidden;
  position: relative;
}

.c-roundedButton__inner::before {
  background-color: currentColor;
  content: "";
  height: 101%;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transform: scaleY(0);
  transform: scaleY(0);
  -webkit-transform-origin: bottom left;
  transform-origin: bottom left;
  -webkit-transition-duration: .4s;
  transition-duration: .4s;
  -webkit-transition-property: -webkit-transform;
  transition-property: -webkit-transform;
  transition-property: transform;
  transition-property: transform, -webkit-transform;
  -webkit-transition-timing-function: cubic-bezier(.19, 1, .22, 1);
  transition-timing-function: cubic-bezier(.19, 1, .22, 1);
  width: 100%;
}
/* ... */

